Added first line of stats to the map.
Clean up some of the CSS for it too.

--- a/styles/map.css
+++ b/styles/map.css
@@ -13,3 +13,9 @@
 	margin: -2px;
 	padding: 0px;
 }
+
+#health_bar {
+	width: 100px;
+	background-color: rgb(204, 204, 204);
+	display: inline-block;
+}
