Moved the character stat bar to it's own file.
Since it's used in more than one place, it meant moving the CSS
around a little too.

--- a/styles/default.css
+++ b/styles/default.css
@@ -11,3 +11,9 @@ p {
 strong {
 	font-weight: bold;
 }
+
+.stat_bar {
+	width: 100px;
+	background-color: rgb(204, 204, 204);
+	display: inline-block;
+}
