Added showing outcome of last round.
Still no actual fighting but we now have the ability to at least
show what has happened.

--- a/styles/fight.css
+++ b/styles/fight.css
@@ -36,3 +36,13 @@
 	background-color: rgb(153, 153, 255);
 	padding: 2px;
 }
+
+#round_feedback {
+	display: none;
+	margin-bottom: 5px;
+}
+
+#round_feedback>ul>li {
+	padding: 5px;
+	margin-bottom: 2px;
+}
