--- a/styles/items.css
+++ b/styles/items.css
@@ -2,3 +2,35 @@
 	width: 500px;
 }
 
+.player>.name {
+	background-color: rgb(0, 255, 0);
+}
+
+.player {
+	float: left;
+	width: 150px;
+	text-align: center;
+}
+
+.portrait {
+	min-height: 130px;
+	text-align: center;
+}
+
+.name {
+	font-weight: bold;
+	font-size: 120%;
+	text-align: center;
+	line-height: 140%;
+}
+
+#items {
+}
+
+#items>.item {
+	float: left;
+	width: 50px;
+	height: 50px;
+	border: 1px solid black;
+	margin: 5px;
+}
