--- a/styles/items.css
+++ b/styles/items.css
@@ -24,13 +24,24 @@
 	line-height: 140%;
 }
 
-#items {
+#invent {
+	min-height: 400px;
+	overflow: auto;
 }
 
-#items>.item {
+#items {
+	width: 60%;
+}
+
+#items-list>.item {
 	float: left;
 	width: 50px;
 	height: 50px;
 	border: 1px solid black;
 	margin: 5px;
+}
+
+#item-details {
+	width: 35%;
+	float: right;
 }
