Added interface to see which items are currently equipped.
I've strayed away from original NeoQuest here, but I think this is
a more interesting way of seeing what's equipped. Unfortunately, I'm
terrible at desiging things so I had to find a stick man off Google
Images (unlicensed) because I couldn't even draw one myself.

Can't unequip items yet, despite what it says.

--- a/styles/items.css
+++ b/styles/items.css
@@ -24,11 +24,6 @@
 	line-height: 140%;
 }
 
-#invent {
-	min-height: 400px;
-	overflow: auto;
-}
-
 #items {
 	width: 60%;
 }
@@ -55,4 +50,38 @@
 
 #item-details>.item-actions li {
 	padding: 10px;
+}
+
+#equipment {
+	position: relative;
+	margin: 10px 10px 0 0;
+	float: right;
+	width: 131px;
+	height: 180px;
+	
+	background-image: url(../images/knight.png);
+}
+
+#equipment .equip-box {
+	height: 50px;
+	width: 50px;
+	
+	position: absolute;
+	
+	background-color: rgb(211, 205, 205);
+}
+
+#equipment .head {
+	top: 10px;
+	left: 38px;
+}
+
+#equipment .righthand {
+	top: 95px;
+	left: 80px;
+}
+
+#equipment .lefthand {
+	top: 90px;
+	left: 8px;
 }
